--- a/blog.html
+++ b/blog.html
@@ -81,7 +81,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 <div class="col-md-12">
 <div class="about-desc">
-<span class="heading-meta">About Me</span>
+<span class="heading-meta">My Blogs</span>
 <h2 class="colorlib-heading">Who Am I?</h2>
 
 <p>Hi !
