--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<audio controls>
 
  
-  <source src="./nikki" type="audio/mpeg">
+  <source src="./nikki.mp3" type="audio/mp3
+				">
   
 </audio>
 	  <b>Click to listen more about me</b>
