--- a/index.html
+++ b/index.html
@@ -125,10 +125,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	
 
 	<audio controls>
-
- 
-  <source src="./nikki.mp3" type="audio/mp3
-				">
+     <source src="nikki.mp3" type="audio/mp3">
   
 </audio>
 	  <b>Click to listen more about me</b>
