--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <p>I love travelling and to meet people and enjoy having quality conversations related to the fine art of living.</p>
 	
 <audio controls>
+	<b> Click to listen to my fav song while you're here</b>
      <source src="nikki.mp3" type="audio/mp3">
   
 </audio>
