--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <p><strong>Hello, I'm Nikki Chepkirui</strong> I'm a young lady who is passionate about internet marketing and social media.I'm an ordinary young lady who enjoys life to the fulles. 
 	 </p>
 <p>I love travelling and to meet people and enjoy having quality conversations related to the fine art of living.</p>
-<p><b> Click to listen to my fav song while you're here</b><p>
+
 <audio controls>
-	
+    <b> Click to listen to my fav song while you're here</b><br>
      <source src="nikki.mp3" type="audio/mp3">
   
 </audio>
