--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <div class="about-desc">
 <span class="heading-meta">About Me</span>
 <h2 class="colorlib-heading">Who Am I?</h2>
-<p><strong>Hello, I'm Nikki Chepkirui</strong> I'm a young lady who is passionate about internet marketing and social media.I'm an ordinary young lady who enjoys life to the fulles. 
+<p><strong>Hello, I'm Nikki Chepkirui</strong> I'm a young lady who is passionate about internet marketing and social media. I'm an ordinary young lady who enjoys life to the fullest. 
 	 </p>
 <p>I love travelling and to meet people and enjoy having quality conversations related to the fine art of living.</p>
 
