--- a/index.html
+++ b/index.html
@@ -123,14 +123,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	 </p>
 <p>I love travelling and to meet people and enjoy having quality conversations related to the fine art of living.</p>
 <p> <b> Listen to my fav song while you're here</b></p>
-<audio controls>
+<audio controls Autoplay>
      <source src="nikki.mp3" type="audio/mp3">
 Your browser does not support the audio element.
 </audio>
-	<audio controls autoplay>
-     <source src="Glass.mp3" type="audio/mp3">
-Your browser does not support the audio element.
-</audio>
+
 	
 
 	
