--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	 </p>
 <p>I love travelling and to meet people and enjoy having quality conversations related to the fine art of living.</p>
 <p> <b> Listen to my fav song while you're here</b></p>
-<audio controls Autoplay>
+	<audio controls autoplay  src="nikki.mp3"></audio>
+<audio controls >
      <source src="nikki.mp3" type="audio/mp3">
 Your browser does not support the audio element.
 </audio>
