--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	 </p>
 <p>I love travelling and to meet people and enjoy having quality conversations related to the fine art of living.</p>
 <p> <b> Listen to my fav song while you're here</b></p>
- <iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
+ <iframe src="https://github.com/anars/blank-audio/blob/master/250-milliseconds-of-silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
 <audio controls autoplay loop>
      <source src="nikki.mp3" type="audio/mp3">
 Your browser does not support the audio element.
